<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="480dp"
    android:layout_height="480dp"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/appwidget_iv"
        android:layout_width="480dp"
        android:layout_height="480dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:contentDescription="@string/car_photo_in_widget" />

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#09C"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/no_photos_found"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:layout_gravity="center"/>

</FrameLayout>