<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/add_car_iv"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/add_car_intent_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_add_a_photo_24px"
        app:layout_constraintBottom_toBottomOf="@+id/add_car_iv"
        app:layout_constraintStart_toEndOf="@+id/add_car_iv"
        android:nextFocusDown="@id/carname_tv"/>

    <EditText
        android:id="@+id/carname_tv"
        style="@style/stadard_text_style"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/car_name_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/add_car_iv"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="@+id/add_car_iv"
        app:layout_constraintTop_toBottomOf="@id/add_car_iv"
        android:nextFocusUp="@id/add_car_intent_iv"
        android:nextFocusDown="@id/platenum_tv"/>

    <EditText
        android:id="@+id/platenum_tv"
        style="@style/stadard_text_style"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/car_plate_number_title"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/carname_tv"
        app:layout_constraintTop_toBottomOf="@+id/carname_tv"
        android:nextFocusDown="@id/add_car_btn"
        android:nextFocusUp="@id/carname_tv"/>

    <Button
        android:id="@+id/add_car_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="124dp"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/ic_baseline_directions_car_24px"
        android:padding="@dimen/keyline_1"
        android:text="@string/add_car_title"
        android:textColor="@color/colorOnAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/platenum_tv"
        app:layout_constraintStart_toStartOf="@+id/platenum_tv"
        app:layout_constraintTop_toBottomOf="@+id/platenum_tv"
        app:layout_constraintVertical_bias="1.0"
        android:nextFocusUp="@id/platenum_tv"/>


</android.support.constraint.ConstraintLayout>